# mcp-servers

.github/workflows/: docker-publish.yaml
src/duckduckgo/: Dockerfile  pyproject.toml  server.py
src/e2b/: package-lock.json  package.json
src/e2b/src/: index.ts
src/fastmcp-openapi/: Dockerfile  README.md  pyproject.toml
src/fastmcp-openapi/fastmcp_openapi_server/: __main__.py
src/mcp-graphql/: Dockerfile  README.md  entrypoint.sh  package.json
src/mcp-graphql/src/: index.ts
src/mcp-graphql/src/helpers/: headers.ts
src/memory/: package.json
src/mongodb-lens/: Dockerfile  README.md  mongodb-lens.js  package-lock.json  package.json
src/postgres/: Dockerfile  index.ts  package-lock.json  package.json
src/puppeteer/: package-lock.json  package.json
src/quickchart/: Dockerfile  index.ts  package-lock.json  package.json  tsconfig.json
src/sequentialthinking/: index.ts  package.json
src/strava/: Dockerfile  pyproject.toml  requirements.txt  strava_server.py
src/thingsboard/: Dockerfile  README.md  helpers.py  pyproject.toml  thingsboard.py
src/thingsboard-docs/: Dockerfile  README.md  openapi-spec.json  pyproject.toml  thingsboard-docs.py
src/thingsboard/resources/: mcp_server.py  thingsboard_client.py
src/thingsboard/tools/: __init__.py  alarm_rules.py  assets.py  device.py  devices.py  helpers.py  relations.py  telemetry.py
src/thingsboard/utils/: helpers.py
src/yr/: Dockerfile  pyproject.toml  yr.py
