[project]
name = "fastmcp-openapi-server"
version = "0.1.1"
description = "An MCP server that dynamically loads tools from an OpenAPI specification."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4.1",
    "httpx>=0.28.1",
    "jsonref>=1.1.0",
    "openapi-spec-validator>=0.7.1",
]
[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]
[project.scripts]
fastmcp-openapi-server = "fastmcp_openapi_server.__main__:main"
