[project]
name = "thingsboard-mcp-server"
version = "1.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "kaleido>=0.2.1",
    "pandas>=2.0.0",
]
